--- a/.github/workflows/cypress-tests-wlm.yml
+++ b/.github/workflows/cypress-tests-wlm.yml
@@ -1,31 +1,17 @@
 name: Cypress e2e integration tests workflow with security
 on:
-  workflow_call:
-    inputs:
-      test-name:
-        required: true
-        type: string
-      test-command:
-        required: true
-        type: string
-      osd-serve-args:
-        required: false
-        type: string
-      security-enabled:
-        required: false
-        type: string
-      artifact-name-suffix:
-        required: false
-        type: string
-      multi-opensearch-enabled:
-        required: false
-        type: boolean
-        default: true
+  pull_request:
+    branches:
+      - "*"
+  push:
+    branches:
+      - "*"
 env:
   OS_BRANCH: "3.3"
+  SECURITY_ENABLED: "true"
 jobs:
   tests:
-    name: Run Cypress E2E tests for ${{ inputs.test-name }}
+    name: Run Cypress E2E tests for WLM
     runs-on: ubuntu-latest
     env:
       # prevents extra Cypress installation progress messages
@@ -54,7 +40,6 @@ jobs:
           echo "VERSION=$(yarn --silent pkg-version)" >> $GITHUB_ENV
       - name: Get security setups
         run: |
-          SECURITY_ENABLED=${{ inputs.security-enabled }}
           if [ "$SECURITY_ENABLED" != 'false' ]; then
               echo "SECURITY_ENABLED=true" >> $GITHUB_ENV
           else
@@ -165,12 +150,12 @@ jobs:
               ./bin/opensearch-dashboards-plugin remove securityDashboards
               sed -i /^opensearch_security/d config/opensearch_dashboards.yml
               sed -i 's/https/http/' config/opensearch_dashboards.yml
-              bin/opensearch-dashboards serve ${{ inputs.osd-serve-args }} &
+              bin/opensearch-dashboards serve &
               timeout 300 bash -c 'while [[ "$(curl http://localhost:5601/api/status | jq -r '.status.overall.state')" != "green" ]]; do sleep 5; done'
               curl http://localhost:5601/api/status
           else
               echo "Keep Dashboards Security"
-              bin/opensearch-dashboards serve ${{ inputs.osd-serve-args }} &
+              bin/opensearch-dashboards serve &
               timeout 300 bash -c 'while [[ "$(curl -u admin:${{ env.OPENSEARCH_INITIAL_ADMIN_PASSWORD }} -k http://localhost:5601/api/status | jq -r '.status.overall.state')" != "green" ]]; do sleep 5; done'
               curl http://localhost:5601/api/status -u admin:${{ env.OPENSEARCH_INITIAL_ADMIN_PASSWORD }} --insecure
           fi
