--- a/.github/workflows/cypress-tests-wlm.yml
+++ b/.github/workflows/cypress-tests-wlm.yml
@@ -78,11 +78,11 @@ jobs:
       - name: Run Opensearch with A Single Plugin
         uses: derek-ho/start-opensearch@v9
         with:
-          opensearch-version: ${{ env.OPENSEARCH_VERSION }}
-          plugins: "file:$GITHUB_WORKSPACE/security.zip, file:$GITHUB_WORKSPACE/wlm.zip"
+          opensearch-version: ${{ env.VERSION }}
+          plugins: "file:$GITHUB_WORKSPACE/security.zip,file:$GITHUB_WORKSPACE/wlm.zip"
           security-enabled: true
           admin-password: ${{ env.OPENSEARCH_INITIAL_ADMIN_PASSWORD }}
-          jdk-version: 2
+          jdk-version: 21
 
       - name: Enable WLM (with or without Security) and verify
         run: |
