--- a/.github/workflows/cypress-tests-wlm.yml
+++ b/.github/workflows/cypress-tests-wlm.yml
@@ -73,6 +73,7 @@ jobs:
           cd security
           ./gradlew --no-daemon assemble
           cp build/distributions/opensearch-security-*.zip "$GITHUB_WORKSPACE/security.zip"
+          ls -la build/distributions/
           ls -lh "$GITHUB_WORKSPACE/security.zip"
 
       - name: Run Opensearch with A Single Plugin
@@ -123,6 +124,30 @@ jobs:
           repository: opensearch-project/OpenSearch-Dashboards
           path: OpenSearch-Dashboards
           ref: ${{ env.OPENSEARCH_DASHBOARDS_VERSION }}
+
+      - name: Configure OpenSearch Dashboards for Cypress (patch existing YAML)
+        run: |
+          set -euo pipefail
+          FILE="OpenSearch-Dashboards/config/opensearch_dashboards.yml"
+          test -f "$FILE" || { echo "Missing $FILE"; exit 1; }
+
+          # helper: replace line 'key: ...' or append if missing
+          set_yaml() {
+            local key="$1" val="$2"
+            if grep -qE "^[[:space:]]*${key}:" "$FILE"; then
+              sed -i -E "s|^([[:space:]]*${key}:).*|\1 ${val}|" "$FILE"
+            else
+              printf "%s: %s\n" "$key" "$val" >> "$FILE"
+            fi
+          }
+
+          # desired settings
+          set_yaml 'server.host' '"0.0.0.0"'
+          set_yaml 'opensearch.hosts' '["https://localhost:9200"]'
+          set_yaml 'opensearch.ssl.verificationMode' 'none'
+
+          echo "Updated $FILE:"
+          sed -n '1,200p' "$FILE"
 
       - name: Checkout Query Insights Dashboards plugin
         uses: actions/checkout@v4
